--- a/GendocsForms/GendocsForms.csproj
+++ b/GendocsForms/GendocsForms.csproj
@@ -34,6 +34,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Resources\icons8-cancelar-rojo-24.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Resources\icons8-comprobado-24.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="itext7" Version="7.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
