--- a/ViewCoreWPF/ViewCoreWPF.csproj
+++ b/ViewCoreWPF/ViewCoreWPF.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Recursos\fml_ingenieria_logo_194x89.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Recursos\fml_ingenieria_logo_194x89.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.2.0" />
   </ItemGroup>
 
